# CPL2022

./: README.md
PlusProblems/: CMakeLists.txt  factorials_sum.c  quine.c
hw1/: ASCII.c  CMakeLists.txt  Change.c  Equation.c  Gravity.c  Inverse.c  Julian.c  Pi.c  Time.c
hw2/: CMakeLists.txt  Inverse2.c  collatz.c  factorial.c  obstacle.c  obstacle2.c  series.c  single.c
hw3/: CMakeLists.txt  Quicksort.c  decimal.c  flip.c  josephus.c  palindrome.c  statistics.c
hw4/: CMakeLists.txt  MatrixMult.c  life.c  mines.c  sudoku.c  trace.c
hw5/: CMakeLists.txt  absolute_prime.c  behaviors.c  magic_square.c  next_permutation.c  radix.c  sum.c
hw6/: CMakeLists.txt
