cmake_minimum_required(VERSION 3.23)
project(hw1 C)

set(CMAKE_C_STANDARD 99)

add_executable(hw1 ASCII.c)
add_executable(Change Change.c)
add_executable(Pi Pi.c)
add_executable(Time Time.c)
add_executable(Inverse Inverse.c)
add_executable(Gravity Gravity.c)
add_executable(Julian Julian.c)
add_executable(Equation Equation.c)
