cmake_minimum_required(VERSION 3.23)
project(hw2 C)

set(CMAKE_C_STANDARD 99)

add_executable(hw2 collatz.c)
add_executable(single single.c)
add_executable(factorial factorial.c)
add_executable(series series.c)
add_executable(Inverse2 Inverse2.c)
add_executable(obstacle obstacle.c)
add_executable(obstacle2 obstacle2.c)
