cmake_minimum_required(VERSION 3.23)
project(hw5 C)

set(CMAKE_C_STANDARD 99)

add_executable(hw5 behaviors.c)
add_executable(sum sum.c)
add_executable(absolute_prime absolute_prime.c)
add_executable(radix radix.c)
add_executable(next_permutation next_permutation.c)
add_executable(magic_square magic_square.c)
